# manim-controldata-viz-bot

./: .gitignore  pyproject.toml
npzcompare/: app.py
